(lang dune 3.13)

(name minttea_playground)

(generate_opam_files true)

(source
 (github sdaigo/minttea_playground))

(authors "sdaigo")

(maintainers "sdaigo")

(license LICENSE)

(package
 (name minttea_playground)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
